# Effect-of-shape-and-adaptive-kinematics

./: CMakeLists.txt  README.md  analyze_all_modes.py  run_all_simulations.sh
Gupta_2022/: README.md
Gupta_2022/docs/: COMPARISON.md  GUPTA_2022_SPEC.md
Gupta_2022/input_files/: generate_all_gupta_inputs.sh
Gupta_2022/src/: IBEELKinematicsGupta.cpp  IBEELKinematicsGupta.h
Zhang_2018/input_files/: generate_all_zhang_inputs.sh  input2d_Zhang_Re100000_h004  input2d_Zhang_Re100000_h008  input2d_Zhang_Re100000_h012  input2d_Zhang_Re100000_h016  input2d_Zhang_Re100000_h020  input2d_Zhang_Re100000_h024  input2d_Zhang_Re10000_h004  input2d_Zhang_Re10000_h008  input2d_Zhang_Re10000_h012  input2d_Zhang_Re10000_h016  input2d_Zhang_Re10000_h020  input2d_Zhang_Re10000_h024  input2d_Zhang_Re1000_h008  input2d_Zhang_Re1000_h012  input2d_Zhang_Re1000_h016  input2d_Zhang_Re1000_h020  input2d_Zhang_Re1000_h024  input2d_Zhang_Re200000_h004  input2d_Zhang_Re200000_h008  input2d_Zhang_Re200000_h012  input2d_Zhang_Re200000_h016  input2d_Zhang_Re200000_h020  input2d_Zhang_Re200000_h024  input2d_Zhang_Re50000_h004  input2d_Zhang_Re50000_h008  input2d_Zhang_Re50000_h012  (+20 more)
validation_suite/: README_VALIDATION.md  run_validation_suite.sh
validation_suite/gupta2022/: CMakeLists.txt  IBGupta2022Kinematics.cpp  IBGupta2022Kinematics.h
validation_suite/gupta2022/anguilliform/: input2d_NACA0006_anguilliform  input2d_NACA0008_anguilliform
validation_suite/gupta2022/carangiform/: input2d_NACA0012_carangiform
validation_suite/gupta2022/mesh_generators/: generate_naca_profile.py
(+12 files in other folders)
